fix c auto doffing